--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Delius&family=Emilys+Candy&family=Griffy&family=Meow+Script&display=swap" rel="stylesheet">
-    <title>ALURAFLIX</title>
+    <title>DUDAFLIX</title>
 </head>
 
 <body>
 
-    <header>ALURAFLIX</header>
+    <header>DUDAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
